[tool.poetry]
name = "new-ficha-1-0"
version = "0.1.0"
description = "Widget for bank"
authors = ["Maksim Boykov <mboykov6@gmail.com>"]
readme = "README.md"
packages = [{include = "new_ficha_1"}]

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
isort = "^5.13.2"
black = "^24.10.0"
mypy = "^1.14.0"



[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude ='''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)'''

[tool.flake8]
max-line-length = 119
exclude ='''
(
  /(
    \.git          # в корне проекта
    | __pycache__
  )/
)'''


[tool.isort]
# максимальная длина строки
line_length = 119
multi_line_output = 3

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = "(^\\.git/|^venv/)"
